--- a/common/.env
+++ b/common/.env
@@ -9,7 +9,9 @@ FRAME_HEIGHT=480
 FACE_MODEL_PATH=models/face_recognition.onnx
 DEVICE=cuda
 
-SERVER_IP=172.16.111.127
+SERVER_IP=127.0.0.1
+#SERVER_IP=172.16.111.127
+#SERVER_IP=192.168.0.101
 SERVER_PORT=8080
 
 # 追加の設定値
@@ -20,3 +22,4 @@ TIMEOUT=5
 NUM_CAMERAS=4
 
 NUM_FEATURES=30
+GAME_STATUS=True
